manifest/base/frontend.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend
  namespace: 3-tier-app
  labels:
    name: frontend
    project: 3-tier-app
    env: test

spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend

  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
      - name: nginx-frontend
        image: sudheesh12/frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3-tier-app
spec:
  type: NodePort
  selector:
    name: frontend
  ports:
  - port: 80
    nodePort: 30000
